--- a/src/components/GenreExplorer.css
+++ b/src/components/GenreExplorer.css
@@ -768,6 +768,7 @@
 @media (max-width: 768px) {
   .ge {
     width: 100%;
+    max-width: 100vw;
     min-width: 0;
   }
 
